--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ tabulate = "^0.8.6"
 pandas = "^0.25.3"
 joblib = "^0.14.1"
 jieba_fast = "^0.53"
-tf-estimator-nightly = "^2.1.0-alpha.2020030401"
-tf-nightly = "^2.2.0-alpha.20200304"
+tensorflow = "2.2.0rc2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.2"
