--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sknlp"
-version = "0.1.13"
+version = "0.2.0"
 description = ""
 authors = ["nanaya <nanaya100@gmail.com>"]
 license = "MIT"
@@ -12,13 +12,14 @@ tabulate = "^0.8.6"
 pandas = "1.0.4"
 joblib = "^0.14.1"
 jieba_fast = "^0.53"
-tensorflow = "2.3.0"
-tensorflow-text = "2.3.0"
-tf-models-official = "^2.2.0"
-tensorflow-addons = "^0.11.2"
+tensorflow = "2.4.0"
+tensorflow-text = "^2.4.1"
+tf-models-official = "^2.3.0"
+tensorflow-addons = "0.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.2"
+black = {version = "^20.8b1", allow-prereleases = true}
 
 [[tool.poetry.source]]
 name = "aliyun"
