--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sknlp"
-version = "0.1.22"
+version = "0.1.24"
 description = ""
 authors = ["nanaya <nanaya100@gmail.com>"]
 license = "MIT"
@@ -16,6 +16,7 @@ tensorflow = "2.3.1"
 tf-models-official = "^2.3.0"
 tensorflow-text = "2.3.0"
 tensorflow-addons = "^0.12.0"
+keras-tuner = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.2"
