--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sknlp"
-version = "0.1.24"
+version = "0.1.27"
 description = ""
 authors = ["nanaya <nanaya100@gmail.com>"]
 license = "MIT"
@@ -13,10 +13,11 @@ pandas = "1.0.4"
 joblib = "^0.14.1"
 jieba_fast = "^0.53"
 tensorflow = "2.3.1"
-tf-models-official = "^2.3.0"
+tf-models-official = "2.3.0"
 tensorflow-text = "2.3.0"
-tensorflow-addons = "^0.12.0"
+tensorflow-addons = "0.11.2"
 keras-tuner = "^1.0.2"
+numpy = "<1.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.2"
