--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,22 @@
 [tool.poetry]
 name = "sknlp"
-version = "0.1.31"
+version = "0.2.1"
 description = ""
 authors = ["nanaya <nanaya100@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-sklearn = "^0.0"
+python = ">=3.7"
 tabulate = "^0.8.6"
 pandas = "1.0.4"
-joblib = "^0.14.1"
-jieba_fast = "^0.53"
-tensorflow = "2.3.1"
-tf-models-official = "2.3.0"
-tensorflow-text = "2.3.0"
-tensorflow-addons = "0.11.2"
-keras-tuner = "^1.0.2"
 numpy = "<1.20.0"
+tensorflow = "2.5.0"
+tensorflow-text = "2.5.0"
+tf-models-official = "2.5.0"
+tensorflow-addons = "0.13.0"
+jieba = "^0.42.1"
+scikit-learn = "^0.24.2"
+keras-tuner = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.2"
