--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,18 +7,18 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.7.5"
-tabulate = "^0.8.6"
+tabulate = "0.8.9"
 pandas = "1.3.1"
-tensorflow = "2.5.0"
-tensorflow-text = "2.5.0"
-tf-models-official = "2.5.0"
-tensorflow-addons = "0.13.0"
+tensorflow = "2.6.0"
+tensorflow-text = "2.6.0"
+tf-models-official = "2.6.0"
+tensorflow-addons = "0.14.0"
 jieba = "^0.42.1"
-scikit-learn = "^0.24.2"
+scikit-learn = "1.0"
 keras-tuner = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.3.2"
+pytest = "6.2.5"
 black = { version = "^20.8b1", allow-prereleases = true }
 
 [[tool.poetry.source]]
