--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ tensorflow-addons = "0.14.0"
 jieba = "^0.42.1"
 scikit-learn = "1.0"
 keras-tuner = "^1.0.2"
+igraph = "^0.9.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "6.2.5"
