--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = ["nanaya <nanaya100@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = ">=3.7.5"
+python = ">=3.7.5,<3.10"
 tabulate = "0.8.9"
 pandas = "1.3.1"
-tensorflow = "2.6.0"
-tensorflow-text = "2.6.0"
+tensorflow = "2.6.2"
 tensorflow-addons = "0.14.0"
+tensorflow-text = "2.6.0"
 jieba = "^0.42.1"
 scikit-learn = "1.0"
 keras-tuner = "^1.0.2"
