--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ igraph = "^0.9.8"
 [tool.poetry.dev-dependencies]
 pytest = "6.2.5"
 black = { version = "^20.8b1", allow-prereleases = true }
+pytest-cov = "^3.0.0"
 
 [[tool.poetry.source]]
 name = "aliyun"
