--- a/.github/workflows/run_full_test.yml
+++ b/.github/workflows/run_full_test.yml
@@ -28,9 +28,11 @@ jobs:
         run: poetry install --no-interaction
       - name: Install gdown
         run: poetry run python -m pip install gdown
+      - name: Test
+        run: ls .
       - name: Download data
         run: |
           source .venv/bin/activate
-          ./github/scripts/prepare_data.sh
+          bash .github/scripts/prepare_data.sh
       - name: Test
         run: ls pretrain
