--- a/.github/workflows/run_full_test.yml
+++ b/.github/workflows/run_full_test.yml
@@ -1,7 +1,5 @@
 name: CI
 on: push
-env:
-  POETRY_VIRTUALENVS_PATH: /home/runner/.cache/pypoetry/virtualenvs/env
 
 jobs:
   ci:
@@ -17,22 +15,28 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
           installer-parallel: true
+
       - name: Load cached venv
         id: cached-poetry-dependencies
         uses: actions/cache@v2
         with:
           path: .venv
-          key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+          key: venv-${{ runner.os }}-${{ hashFiles('poetry.lock') }}
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction
-      - name: Install gdown
-        run: poetry run python -m pip install gdown
-      - name: Test
-        run: ls .
-      - name: Download data
+
+      - name: Load cached pretrain
+        id: cached-pretrain
+        uses: actions/cache@v2
+        with:
+          path: pretrain
+          key: pretrain-$
+      - name: Download pretrain
         run: |
           source .venv/bin/activate
-          bash .github/scripts/prepare_data.sh
+          python -m pip install gdown
+          bash .github/scripts/download_pretrain.sh
+
       - name: Test
         run: ls pretrain
