fix(CI): pytest参数错误

--- a/.github/workflows/run_full_test.yml
+++ b/.github/workflows/run_full_test.yml
@@ -40,4 +40,4 @@ jobs:
           bash .github/scripts/download_pretrain.sh
 
       - name: Test
-        run: poetry run python -m pytest --conv sknlp tests
+        run: poetry run python -m pytest --conv=sknlp tests
