fix(CI): pytest参数还是写错了

--- a/.github/workflows/run_full_test.yml
+++ b/.github/workflows/run_full_test.yml
@@ -40,6 +40,4 @@ jobs:
           bash .github/scripts/download_pretrain.sh
 
       - name: Test
-        run: |
-          source .venv/bin/activate
-          pytest --conv=sknlp tests
+        run: poetry run python -m pytest --cov=sknlp tests
