--- a/.github/workflows/run_full_test.yml
+++ b/.github/workflows/run_full_test.yml
@@ -39,7 +39,7 @@ jobs:
           python -m pip install -q gdown
           bash .github/scripts/download_pretrain.sh
       - name: LS
-        run: ls pretrain/electra_180g_small
+        run: ls -Ah pretrain/electra_180g_small
 
       - name: Test
         run: poetry run python -m pytest -sv tests/module/text2vec/test_bert2vec.py
